# rustchess

./: Cargo.toml  Readme.md  rustfmt.toml
.github/workflows/: release.yml
chess_cli/: Cargo.toml
chess_cli/src/: main.rs
chess_lib/: Cargo.toml
chess_lib/benches/: 100_move_game.rs
chess_lib/src/: board.rs  chess_move.rs  error.rs  game.rs  lib.rs  move_tree.rs  piece.rs  traits.rs  types.rs
src/: game.rs
unchess_cli/: Cargo.toml  build.rs
unchess_cli/src/: main.rs
unchess_lib/: Cargo.toml  Changelog.md  pgn-ebnf.md
unchess_lib/benches/: 100_move_game.rs  piece_list_generation.rs
unchess_lib/benches/pgn/: byrne_fischer_1963.pgn
unchess_lib/proptest-regressions/: pgn.txt
unchess_lib/proptest-regressions/parser/: fen.txt
unchess_lib/src/: default_types.rs  engine.rs  enums.rs  error.rs  fen.rs  game.rs  lib.rs  notation.rs  pgn.rs  piece.rs  simple_types.rs  traits.rs  types.rs
unchess_lib/src/board/: bitboard.rs  mod.rs  piece_list.rs  transparent_board.rs
unchess_lib/src/parser/: fen.rs  pgn.rs
unchess_lib/tests/: parsing.rs  piece_list.rs
unchess_lib/tests/pgn/: fischer_benko_1963.pgn  fischer_myagmarsuren_1967.pgn  fischer_spassky_1972.pgn
