[workspace]
resolver="3"
members=["chess_cli", "chess_lib"]
[workspace.dependencies]
chess_lib = {path = "chess_lib"}
chess_cli = {path = "chess_cli"}

[profile.release]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false