[workspace]
resolver="3"
members=["unchess_cli", "unchess_lib"]
[workspace.dependencies]
unchess-lib = {path = "unchess_lib"}

[profile.release]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
