[package]
name = "unchess-lib"
version = "0.2.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
petgraph = "0.8.1"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"]}
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "100_move_game"
harness = false
